--- a/views/index.jade
+++ b/views/index.jade
@@ -2,11 +2,10 @@ extends layout
 
 block content
   h1= title
-  p Welcome to #{title}
   table
     thead
       tr
-        th 제목
+        th 기사제목
         th 출처
     tbody
       each article in data
