--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -2,7 +2,17 @@ body {
   padding: 50px;
   font: 14px "Lucida Grande", Helvetica, Arial, sans-serif;
 }
-
 a {
   color: #00B7FF;
+}
+
+table{
+  font-size: 17px;
+}
+
+@media only screen and (max-width: 600px) {
+  body {
+    /*background-color: lightblue;*/
+    padding: 10px;
+  }
 }
