--- a/views/index.jade
+++ b/views/index.jade
@@ -11,6 +11,6 @@ block content
       each article in data
         tr
           td #{article.title}
-            a(href=article.url) 링크
+            a(href=article.url) 기사 보기
           td #{article.from}
 
